--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 ---
-layout: page
 title: Contact Me
 description: Have questions? I have answers.
 background: '/img/bg-contact.jpg'
 form: true
 ---
-
+<header>
+<link rel="stylesheet" href="/assets/vendor/font-awesome/css/all.css">
+</header>
+                               <i class="fas fa-scroll"></i>
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
