--- a/about.html
+++ b/about.html
@@ -1,10 +1,9 @@
 ---
-title: About Me
-layout: page
-description: This is what I do.
-background: "/img/bg-about.jpg"
+<header>
+<link rel="stylesheet" href="/assets/vendor/font-awesome/css/all.css">
+</header>
 ---
-
+                               <i class="fas fa-scroll"></i>
 <div style="margin-bottom: 100px;">
   <h1> Who Am I? </h1>
   <br/>If you've made it here, you're awesome.
