--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 ---
-<header>
-<link rel="stylesheet" href="/assets/vendor/font-awesome/css/all.css">
-</header>
+title: About Me
+layout: page
+description: This is what I do.
+background: "/img/bg-about.jpg"
 ---
                                <i class="fas fa-scroll"></i>
 <div style="margin-bottom: 100px;">
