--- a/about.html
+++ b/about.html
@@ -4,21 +4,22 @@ layout: page
 description: This is what I do.
 background: "/img/bg-about.jpg"
 ---
+
 <div class="container">
  
   <h2>Frequently Asked Questions</h2>
  
   <div class="accordion">
     <div class="accordion-item">
-      <a>What can JavaScript Do?</a>
+      <a>When and where can I get the game?</a>
       <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+        <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through Discord, Reddit, and others</p>
       </div>
     </div>
     <div class="accordion-item">
-      <a>How JavaScript Can Modify HTML and CSS Values?</a>
+      <a>What is this game about, anyway?</a>
       <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+        <p>Egypt: Shattered Order is an interactive fiction/strategy video game, or, intrinsically, a political simulator based on the history of Ancient Egypt. You, as a king that seeks to re-unite Egypt under his rule, will have to make decisions that are going to rewrite the history of the most powerful kingdom of its time. And there is a multitude of possibilities to choose from. You can make Egypt rise from the ashes and become the founder of the New Kingdom, or make it collapse and go down in the annals of time as incompetent, disastrous ruler. Choice is yours!</p>
       </div>
     </div>
     <div class="accordion-item">
@@ -34,9 +35,9 @@ background: "/img/bg-about.jpg"
       </div>
     </div>
     <div class="accordion-item">
-      <a>How To Create a Light FAQ Element?</a>
+      <a>What is the goal of Orcinus Games?</a>
       <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+        <p>The ultimate goal is to inspire. The idea is that fun should not override other feelings and ideas that can be ignited in the video game medium. Today, Orcinus Games seeks to ignite appreciation of our past. Tomorrow, it could be anything. </p>
       </div>
     </div>
   </div>
