--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 title: About Me
 layout: page
 description: This is what I do.
-background: "/img/bg-about.jpg"
+background: "/img/bg-index.jpg"
 ---
 
 <div class="container">
