--- a/about.html
+++ b/about.html
@@ -13,25 +13,13 @@ background: "/img/bg-index.jpg"
     <div class="accordion-item">
       <a>When and where can I get the game?</a>
       <div class="content">
-        <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through Discord, Reddit, and others</p>
+        <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through <a href="https://discord.gg/amMNE4x">Discord</a>, <a href="https://www.reddit.com/r/OrcinusGames">Reddit</a>, E-mail and others channels.</p>
       </div>
     </div>
     <div class="accordion-item">
       <a>What is this game about, anyway?</a>
       <div class="content">
         <p>Egypt: Shattered Order is an interactive fiction/strategy video game, or, intrinsically, a political simulator based on the history of Ancient Egypt. You, as a king that seeks to re-unite Egypt under his rule, will have to make decisions that are going to rewrite the history of the most powerful kingdom of its time. And there is a multitude of possibilities to choose from. You can make Egypt rise from the ashes and become the founder of the New Kingdom, or make it collapse and go down in the annals of time as incompetent, disastrous ruler. Choice is yours!</p>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <a>What Is SVG?</a>
-      <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <a>Is FAQ Section Matters In Website?</a>
-      <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
       </div>
     </div>
     <div class="accordion-item">
