--- a/about.html
+++ b/about.html
@@ -11,19 +11,19 @@ background: "/img/bg-index.jpg"
  
   <div class="accordion">
     <div class="accordion-item">
-      <q>When and where can I get the game?</q>
+      <a>When and where can I get the game?</a>
       <div class="content">
         <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through <a class="inherit" href="https://discord.gg/amMNE4x">Discord</a>, <a class="inherit" href="https://www.reddit.com/r/OrcinusGames">Reddit</a>, E-mail and others channels.</p>
       </div>
     </div>
     <div class="accordion-item">
-      <q>What is this game about, anyway?</q>
+      <a>What is this game about, anyway?</a>
       <div class="content">
         <p>Egypt: Shattered Order is an interactive fiction/strategy video game, or, intrinsically, a political simulator based on the history of Ancient Egypt. You, as a king that seeks to re-unite Egypt under his rule, will have to make decisions that are going to rewrite the history of the most powerful kingdom of its time. And there is a multitude of possibilities to choose from. You can make Egypt rise from the ashes and become the founder of the New Kingdom, or make it collapse and go down in the annals of time as incompetent, disastrous ruler. Choice is yours!</p>
       </div>
     </div>
     <div class="accordion-item">
-      <q>What is the goal of Orcinus Games?</q>
+      <a>What is the goal of Orcinus Games?</a>
       <div class="content">
         <p>The ultimate goal is to inspire. The idea is that fun should not override other feelings and ideas that can be ignited in the video game medium. Today, Orcinus Games seeks to ignite appreciation of our past. Tomorrow, it could be anything. </p>
       </div>
