--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ background: "/img/bg-index.jpg"
     <div class="accordion-item">
       <a>When and where can I get the game?</a>
       <div class="content">
-        <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through <a class="inherit" href="https://discord.gg/amMNE4x">Discord</a>, <a class="inherit" href="https://www.reddit.com/r/OrcinusGames">Reddit</a>, E-mail and others channels.</p>
+        <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through <a class="inherit" href="https://discord.gg/amMNE4x">Discord</a>, <a class="inherit" href="https://www.reddit.com/r/OrcinusGames">Reddit</a>, E-mail and other channels.</p>
       </div>
     </div>
     <div class="accordion-item">
