--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
-title: About Me
+title: FAQ
 layout: page
-description: This is what I do.
+description: Frequently Asked Questions about the upcoming game Egypt Shattered Order
 background: "/img/bg-index.jpg"
 ---
 
