--- a/about.html
+++ b/about.html
@@ -23,6 +23,18 @@ background: "/img/bg-index.jpg"
       </div>
     </div>
     <div class="accordion-item">
+      <a>In what time period does <strong>Egypt: Shattered Order</strong> take place?</a>
+      <div class="content">
+       <p><strong>Egypt: Shattered Order</strong> is set in the Second Intermediate Period of Ancient Egypt, where Lower Egypt is controlled by Hyksos, Asian peoples that came to Lower Egypt and gradually seized power, and Upper Egypt, the last stronghold of the original Egyptian culture. And while it is true that Hyksos assimilated into the Egyptian culture and probably did not come to power in a violent way, for the purpose of providing an engaging first-person narrative it is important to establish a distinct perspective; a perspective of a young Egyptian ruler, born into as broken family as is the kingdom, where foreigners are seen as dangerous threats to the natural order. 
+      </div>
+    </div>
+    <div class="accordion-item">
+      <a>It surely can't be historically accurate then, can it?</a>
+      <div class="content">
+       <p>The game's script was written with scholarly works in mind. Thanks to such people as Dušan Magdolen, Kate Spence, John Romer and many many others, who had not only studied physical evidence, but also tried to look past the lenses of creations of the first researchers of Ancient Egypt and stepped forth with their in-depth analyses, we have a scientific paradigm on which to base our work on.</p>
+      </div>
+    </div>
+    <div class="accordion-item">
       <a>What is the goal of Orcinus Games?</a>
       <div class="content">
         <p>The ultimate goal is to inspire. The idea is that fun should not override other feelings and ideas that can be ignited in the video game medium. Today, Orcinus Games seeks to ignite appreciation of our past. Tomorrow, it could be anything. </p>
