--- a/about.html
+++ b/about.html
@@ -34,6 +34,13 @@ background: "/img/bg-index.jpg"
        <p>The game's script was written with scholarly works in mind. Thanks to such people as Dušan Magdolen, Kate Spence, John Romer and many many others, who had not only studied physical evidence, but also tried to look past the lenses of creations of the first researchers of Ancient Egypt and stepped forth with their in-depth analyses, we have a scientific paradigm on which to base our work on.</p>
       </div>
     </div>
+       <div class="accordion-item">
+      <a>Who stands behind Orcinus Games?</a>
+      <div class="content">
+        <p>In short, Orcinus Games is a one-man developer team, meaning that everything from the initial outline of the game to design, programming, marketing and sculpting the final build is handled by Orson De Witt. Orson is a self-published author, linguist, and a Fellow of the Academy of the Moose. But it is a long story; next time.</p>
+      </div>
+    </div>
+  </div>
     <div class="accordion-item">
       <a>What is the goal of Orcinus Games?</a>
       <div class="content">
