--- a/about.html
+++ b/about.html
@@ -31,7 +31,8 @@ background: "/img/bg-index.jpg"
     <div class="accordion-item">
       <a>It surely can't be historically accurate then, can it?</a>
       <div class="content">
-       <p>The game's script was written with scholarly works in mind. Thanks to such people as Dušan Magdolen, Kate Spence, John Romer and many many others, who had not only studied physical evidence, but also tried to look past the lenses of creations of the first researchers of Ancient Egypt and stepped forth with their in-depth analyses, we have a scientific paradigm on which to base our work on.</p>
+       <p>Even though I do allow myself certain liberties in interpretation and representation of Ancient Egyptian history due to the nature of the genre, the game's script is written with scholarly works in mind. Still, it is evident that it's a thin line between a fun game and an authentic game, and that is exactly why your input is critical. 
+        <br>Orcinus Games accepts all tips, suggestions and criticisms, and in case you would like to help and cross-check the historical authenticity, feel free to <a class="inherit" href="/contact">contact me</a>.</p>
       </div>
     </div>
        <div class="accordion-item">
@@ -40,7 +41,6 @@ background: "/img/bg-index.jpg"
         <p>In short, Orcinus Games is a one-man developer team, meaning that everything from the initial outline of the game to design, programming, marketing and sculpting the final build is handled by Orson De Witt. Orson is a self-published author, linguist, and a Fellow of the Academy of the Moose. But it is a long story; next time.</p>
       </div>
     </div>
-  </div>
     <div class="accordion-item">
       <a>What is the goal of Orcinus Games?</a>
       <div class="content">
