--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,14 @@
 ---
 layout: page
-title: Contact Me
+title: Contact
 description: Have questions? I have answers.
-background: '/img/bg-contact.jpg'
+background: '/img/bg-index.jpg'
 form: true
 ---
 
+
+
+<!--
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
@@ -40,5 +43,6 @@ form: true
   <div id="success"></div>
   <div class="form-group">
     <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+-->
   </div>
 </form>
