--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ background: "/img/bg-index.jpg"
       <a>It surely can't be historically accurate then, can it?</a>
       <div class="content">
        <p>Even though I do allow myself certain liberties in interpretation and representation of Ancient Egyptian history due to the nature of the genre, the game's script is written with scholarly works in mind. Still, it is evident that it's a thin line between a fun game and an authentic game, and that is exactly why your input is critical. 
-        <br>Orcinus Games accepts all tips, suggestions and criticisms, and in case you would like to help and cross-check the historical authenticity, feel free to <a class="inherit" href="/contact">contact me</a>.</p>
+        <br>Orcinus Games accepts all tips, suggestions and criticisms, and in case you would like to help and cross-check historical authenticity, feel free to <a class="inherit" href="/contact">contact me</a>.</p>
       </div>
     </div>
        <div class="accordion-item">
