--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,26 @@ description: Have questions? I have answers.
 background: '/img/bg-index.jpg'
 form: true
 ---
+<div class="container">
+<div class="row no-gutters">
+  <div class="col-12 col-sm-6 col-md-8"><p>
+<strike>It's-a me, Mario!</strike> It's me, Orson, who is behind all of this. If you want to get in touch - and any tips, suggestions and criticisms are highly appreciated - there are many ways to do so.
+You could write me an e-mail: <a href="mailto:{{ site.email }}" class="text-muted" {{ site.email }}></a>
+Alternatively, you could head over to the Discord server for a quick chat: <a href="https://discord.gg/amMNE4x" rel="nofollow">https://discord.gg/amMNE4x</a>
+</p>
+<p>
+Egypt: Shattered Order is looking for UI/UX designer and 2D artist to complement the narrative adventure. 
+If you know someone who also has some Ancient Egypt-themed art in their portfolio, please make sure to share this page with them. Thanks!
+</p>
+  </div>
+  <div class="col-6 col-md-4"><img src="http://orsondewitt.com/orson.jpg" alt="Orson De Witt"></div>
+</div>
+</div>
 
-
+<!--
+More than 5 years ago, I decided that it was high time I began writing. The first thing I wrote, I decided to publish. 
+That taught me a lot; one of the lessons I acquired during that period was that my writing was nowhere near what I wanted it to be, so I kept to myself, but I also kept practicing. 
+-->
 
 <!--
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
