--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 ---
-layout: default
 title: Contact
+layout: page
 description: Have questions? I have answers.
 background: '/img/bg-index.jpg'
 ---
