--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,14 @@ background: '/img/bg-index.jpg'
 ---
 <div class="container">
 <div class="row no-gutters">
-    <div class="col-6 col-md-4 mt-1"><img src="http://orsondewitt.com/orson.jpg" alt="Orson De Witt"></div>
+    <div class="col-6 col-md-4 mt-4"><img src="http://orsondewitt.com/orson.jpg" alt="Orson De Witt"></div>
   <div class="col-12 col-sm-6 col-md-8 mt-1" style="border: 2px"><p>
       <strike>It's-a me, Mario!</strike> It's me, Orson, the developer of <strong>Egypt: Shattered Order</strong>. If you want to get in touch - and any tips, suggestions and criticisms are highly appreciated - there are many ways to do so.
 <br>You could write me an e-mail: <a href="mailto:{{ site.email }}">{{ site.email }}</a>
 <br>Alternatively, you could head over to the Discord server for a quick chat: <a href="https://discord.gg/amMNE4x" rel="nofollow">https://discord.gg/amMNE4x</a>
+<br>And there is also a subreddit for you to share your thoughts with the community: <a href="https://www.reddit.com/r/OrcinusGames/" rel="nofollow">https://www.reddit.com/r/OrcinusGames/</a>
 </p>
+          <hr>
 <p>
     <strong>Egypt: Shattered Order</strong> is looking for UI/UX designer and 2D artist to complement the narrative adventure. 
 <br>If you know someone who also has some Ancient Egypt-themed art in their portfolio, please make sure to share this page with them. Thanks!
