--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
-title: Contact
+title: Contacts
 layout: page
-description: Have questions? I have answers.
+description: Connect with Orson De Witt, the developer of the upcoming game Egypt Shattered Order
 background: '/img/bg-index.jpg'
 ---
 <div class="container">
