--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ background: "/img/bg-index.jpg"
     <div class="accordion-item">
       <a>What is this game about, anyway?</a>
       <div class="content">
-        <p>Egypt: Shattered Order is an interactive fiction/strategy video game, or, intrinsically, a political simulator based on the history of Ancient Egypt. You, as a king that seeks to re-unite Egypt under his rule, will have to make decisions that are going to rewrite the history of the most powerful kingdom of its time. And there is a multitude of possibilities to choose from. You can make Egypt rise from the ashes and become the founder of the New Kingdom, or make it collapse and go down in the annals of time as incompetent, disastrous ruler. Choice is yours!</p>
+        <p>Egypt: Shattered Order is an <strong>interactive fiction</strong>/<strong>strategy video game</strong>, or, intrinsically, a <strong>political simulator</strong> based on the history of <strong>Ancient Egypt</strong>. You, as a king that seeks to re-unite Egypt under his rule, will have to make decisions that are going to rewrite the history of the most powerful kingdom of its time. And there is a multitude of possibilities to choose from. You can make Egypt rise from the ashes and become the founder of the New Kingdom, or make it collapse and go down in the annals of time as incompetent, disastrous ruler. Choice is yours!</p>
       </div>
     </div>
     <div class="accordion-item">
