--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ description: Connect with Orson De Witt, the developer of the upcoming game Egyp
 background: '/img/bg-index.jpg'
 ---
 <div class="container">
-<div class="row no-gutters">
+<div class="row">
     <div class="col-6 col-md-4 mt-4"><img src="http://orsondewitt.com/orson.jpg" alt="Orson De Witt"></div>
   <div class="col-12 col-sm-6 col-md-8 mt-1" style="border: 2px"><p>
       <strike>It's-a me, Mario!</strike> It's me, Orson, the developer of <strong>Egypt: Shattered Order</strong>. If you want to get in touch - and any tips, suggestions and criticisms are highly appreciated - there are many ways to do so.
