--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@ description: Connect with Orson De Witt, the developer of the upcoming game Egyp
 background: '/img/bg-index.jpg'
 ---
 <div class="container">
-<div class="row">
-    <div class="col-6 col-md-4 mt-4"><img src="http://orsondewitt.com/orson.jpg" alt="Orson De Witt"></div>
-  <div class="col-12 col-sm-6 col-md-8 mt-1" style="border: 2px"><p>
+<div class="row no-gutters">
+      <div class="col-12 col-sm-6 col-md-8 mt-1"><p>
+    <img style='float:left;width:200px;height:200px; margin-right:10px;' src="http://orsondewitt.com/orson.jpg" alt="Orson De Witt" />
       <strike>It's-a me, Mario!</strike> It's me, Orson, the developer of <strong>Egypt: Shattered Order</strong>. If you want to get in touch - and any tips, suggestions and criticisms are highly appreciated - there are many ways to do so.
 <br>You could write me an e-mail: <a href="mailto:{{ site.email }}">{{ site.email }}</a>
 <br>Alternatively, you could head over to the Discord server for a quick chat: <a href="https://discord.gg/amMNE4x" rel="nofollow">https://discord.gg/amMNE4x</a>
