--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ background: "/img/bg-index.jpg"
     <div class="accordion-item">
       <a>When and where can I get the game?</a>
       <div class="content">
-        <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through <a class="inherit" href="https://discord.gg/amMNE4x">Discord</a>, <a class="inherit" href="https://www.reddit.com/r/OrcinusGames">Reddit</a>, E-mail and other channels.</p>
+        <p>The game is going to come out on Mac and PC, hopefully this year. The exact release date is going to be communicated through <a class="inherit" href="https://discord.gg/amMNE4x" rel="nofollow">Discord</a>, <a class="inherit" href="https://www.reddit.com/r/OrcinusGames">Reddit</a>, E-mail and other channels.</p>
       </div>
     </div>
     <div class="accordion-item">
@@ -38,7 +38,7 @@ background: "/img/bg-index.jpg"
        <div class="accordion-item">
       <a>Who stands behind Orcinus Games?</a>
       <div class="content">
-        <p>In short, Orcinus Games is a one-man developer team, meaning that everything from the initial outline of the game to design, programming, marketing and sculpting the final build is handled by Orson De Witt. Orson is a self-published author, linguist, and a Fellow of the Academy of the Moose. But it is a long story; next time.</p>
+        <p>In short, Orcinus Games is a one-man developer team, meaning that everything from the initial outline of the game to design, programming, marketing and sculpting the final build is handled by me, <a class="inherit" href="/contact">Orson De Witt</a>. I love <a class="inherit" href="http://orsondewitt.com">writing about orcas</a>, imagining alternative history worlds,  <a class="inherit" href="https://discord.gg/amMNE4x" rel="nofollow">making quizes</a>, and many other things, but currently, most of my time is dedicated to making this game happen. There's not enough hours in the day. :(</p>
       </div>
     </div>
     <div class="accordion-item">
