--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ background: "/img/bg-index.jpg"
        <div class="accordion-item">
       <a>Who stands behind Orcinus Games?</a>
       <div class="content">
-        <p>In short, Orcinus Games is a one-man developer team, meaning that everything from the initial outline of the game to design, programming, marketing and sculpting the final build is handled by me, <a class="inherit" href="/contact">Orson De Witt</a>. I love <a class="inherit" href="http://orsondewitt.com">writing about orcas</a>, imagining alternative history worlds,  <a class="inherit" href="https://discord.gg/amMNE4x" rel="nofollow">making quizzes</a>, and many other things, but currently, most of my time is dedicated to making this game happen. I wish there were more hours in a day.</p>
+        <p>In short, Orcinus Games is a one-man developer team, meaning that everything from the initial outline of the game to design, programming, marketing and sculpting the final build is handled by me, <a class="inherit" href="/contact">Orson De Witt</a>. I love <a class="inherit" href="http://orsondewitt.com">writing about orcas</a>, imagining alternative history worlds,  <a class="inherit" href="https://discord.gg/amMNE4x" rel="nofollow">making quizzes</a>, and many other things, but currently, most of my time (excluding my full-time job) is dedicated to making this game happen. I wish there were more hours in a day.</p>
       </div>
     </div>
     <div class="accordion-item">
