--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ background: '/img/bg-index.jpg'
 <div class="container">
 <div class="row no-gutters">
       <div class="col-12 mt-2"><p>
-    <img style="float:left;margin-right:10px;margin-bottom:10px;" src="http://orsondewitt.com/orson.jpg" alt="Orson De Witt" />
+    <img style="float:left;margin-right:10px;margin-bottom:10px;" src="http://orsondewitt.com/assets/images/orson.jpg" alt="Orson De Witt" />
       <strike>It's-a me, Mario!</strike> It's me, Orson, the developer of <strong>Egypt: Shattered Order</strong>. If you want to get in touch - and any tips, suggestions and criticisms are highly appreciated - there are many ways to do so.
 <br>You could write me an e-mail: <a href="mailto:{{ site.email }}">{{ site.email }}</a>
 <br>Alternatively, you could head over to the Discord server for a quick chat: <a href="https://discord.gg/amMNE4x" rel="nofollow">https://discord.gg/amMNE4x</a>
