--- a/about.html
+++ b/about.html
@@ -48,3 +48,14 @@ background: "/img/bg-index.jpg"
   </div>
   
 </div>
+
+<script>
+const items = document.querySelectorAll(".accordion a");
+ 
+function toggleAccordion(){
+  this.classList.toggle('active');
+  this.nextElementSibling.classList.toggle('active');
+}
+ 
+items.forEach(item => item.addEventListener('click', toggleAccordion));
+</script>
